--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cryptoViewer",
   "version": "0.1.0",
+  "homepage": "http://blackglade.github.io/cryptoViewer",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.1.5",
@@ -11,15 +12,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.4",
-    "react-scripts": "4.0.3",
-    "react-trend": "^1.2.5",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
